Disable prefetching on SavePasswords

When prefetching is enabled, the collection view can get configured cells
in advance of them becoming visible. If the item updates after a cell was
prefetched, but before it is visible, the cell cannot be reconfigured.

For SavePasswords, the Export button may need to be enabled/disabled after
being prefetched, so prefetching needs to be disabled.

Bug: 812171
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ieef7b9cc3b91e237638277654e5d373c3906fb47
Reviewed-on: https://chromium-review.googlesource.com/924307
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Ioana Pandele <ioanap@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537441}
Former-commit-id: 0a29b20ea9f2b1e02b76412f233321348889b7c0